# sengo

./: README.org  YENNAI_PADI.org  pyproject.toml
mlm/: sengo.py  sothanai-paangugal.txt  sothanai-varigal.txt
mlm/padalam/01/: YENNAI_PADI.org  sengo.py
mlm/padalam/02/: YENNAI_PADI.org  sengo.py
mlm/padalam/03/: YENNAI_PADI.org  sengo.py  sothanai-paangugal.txt  sothanai-varigal.txt
mlm/padalam/04/: YENNAI_PADI.org  sengo.py  sothanai-paangugal.txt  sothanai-varigal.txt
mlm/padalam/05/: YENNAI_PADI.org  sengo.py  sothanai-paangugal.txt  sothanai-varigal.txt
mlm/padalam/06/: YENNAI_PADI.org  sengo.py  sothanai-paangugal.txt  sothanai-varigal.txt
mlm/padalam/07/: YENNAI_PADI.org  sengo.py  sothanai-paangugal.txt  sothanai-varigal.txt
mlm/padalam/08/: sengo.py
mlm/padalam/09/: sengo.py  sothanai-paangugal.txt  sothanai-varigal.txt
mlm/padalam/10/: sothanai-varigal.txt
mlm/sengo/: __init__.py  sengo.py  vaayil.py
