[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "sengo"
version = "0.0.1"
authors = [
  { name="vanangamudi", email="selva.developer@gmail.com" },
]
description = "Sengo regular expression engine from scratch for Tamil Text"
readme = "YENNAI_PADI.txt"
license = { file="LICENSE" }
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vanangamudi/sengo"
"Bug Tracker" = "https://github.com/vanangamudi/sengo/issues"

[tool.setuptools]
#package-dir = {"" = "mlm"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["mlm"]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = []  # empty by default
namespaces = true  # true by default